Fixed horizontal scrollbar always appearing on desktop.

--- a/themes/aurora/assets/scss/_base.scss
+++ b/themes/aurora/assets/scss/_base.scss
@@ -15,7 +15,7 @@ html {
 	navigation menus look out of line with the ones from pages without scrollbars*/
 	overflow-y: scroll;
 	/* Prevent a scrollbar appearing on mobile when the nav is open */
-	overflow-x: scroll;
+	overflow-x: hidden;
 }
 
 body {
